rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax19/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A {
		default void m(int i);
	}
}